// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Footer Core default renders correctly 1`] = `
<test>
  <footer
    class="ecl-footer-core"
  >
    <div
      class="ecl-container ecl-footer-core__container"
    >
      <section
        class="ecl-footer-core__section ecl-footer-core__section1"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-footer-core__title"
          href="/example"
        >
          European Commission website
        </a>
        <div
          class="ecl-footer-core__description"
        >
          This site is managed by the Directorate-General for Communication
        </div>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section2 ecl-footer-core__section--separator"
      >
        <div
          class="ecl-footer-core__content"
        >
          More information on:
        </div>
        <ul
          class="ecl-footer-core__list ecl-footer-core__list ecl-footer-core__list--columns"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Strategy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              About the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Business, Economy, Euro
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Live, work, travel in the EU
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Law
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Funding, Tenders
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Research and innovation
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Energy, Climate change, Environment
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Education
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Aid, Development cooperation, Fundamental rights
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Food, Farming, Fisheries
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              EU regional and urban development
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Jobs at the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Statistics
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              News
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Events
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Publications
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section3"
      >
        <ul
          class="ecl-footer-core__list ecl-footer-core__list"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Contact the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-core__link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Follow the European Commission on social media
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#ui--external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Resources for partners
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section4"
      >
        <ul
          class="ecl-footer-core__list ecl-footer-core__list"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Language policy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Cookies
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Privacy policy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Legal notice
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Brexit content disclaimer
            </a>
          </li>
        </ul>
      </section>
    </div>
  </footer>
</test>
`;

exports[`EC - Footer Core default renders correctly with extra attributes 1`] = `
<test>
  <footer
    class="ecl-footer-core"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-footer-core__container"
    >
      <section
        class="ecl-footer-core__section ecl-footer-core__section1"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-footer-core__title"
          href="/example"
        >
          European Commission website
        </a>
        <div
          class="ecl-footer-core__description"
        >
          This site is managed by the Directorate-General for Communication
        </div>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section2 ecl-footer-core__section--separator"
      >
        <div
          class="ecl-footer-core__content"
        >
          More information on:
        </div>
        <ul
          class="ecl-footer-core__list ecl-footer-core__list ecl-footer-core__list--columns"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Strategy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              About the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Business, Economy, Euro
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Live, work, travel in the EU
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Law
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Funding, Tenders
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Research and innovation
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Energy, Climate change, Environment
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Education
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Aid, Development cooperation, Fundamental rights
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Food, Farming, Fisheries
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              EU regional and urban development
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Jobs at the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Statistics
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              News
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Events
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Publications
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section3"
      >
        <ul
          class="ecl-footer-core__list ecl-footer-core__list"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Contact the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-core__link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Follow the European Commission on social media
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#ui--external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Resources for partners
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section4"
      >
        <ul
          class="ecl-footer-core__list ecl-footer-core__list"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Language policy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Cookies
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Privacy policy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Legal notice
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Brexit content disclaimer
            </a>
          </li>
        </ul>
      </section>
    </div>
  </footer>
</test>
`;

exports[`EC - Footer Core default renders correctly with extra class names 1`] = `
<test>
  <footer
    class="ecl-footer-core custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-footer-core__container"
    >
      <section
        class="ecl-footer-core__section ecl-footer-core__section1"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-footer-core__title"
          href="/example"
        >
          European Commission website
        </a>
        <div
          class="ecl-footer-core__description"
        >
          This site is managed by the Directorate-General for Communication
        </div>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section2 ecl-footer-core__section--separator"
      >
        <div
          class="ecl-footer-core__content"
        >
          More information on:
        </div>
        <ul
          class="ecl-footer-core__list ecl-footer-core__list ecl-footer-core__list--columns"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Strategy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              About the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Business, Economy, Euro
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Live, work, travel in the EU
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Law
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Funding, Tenders
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Research and innovation
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Energy, Climate change, Environment
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Education
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Aid, Development cooperation, Fundamental rights
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Food, Farming, Fisheries
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              EU regional and urban development
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Jobs at the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Statistics
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              News
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Events
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Publications
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section3"
      >
        <ul
          class="ecl-footer-core__list ecl-footer-core__list"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Contact the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-core__link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Follow the European Commission on social media
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#ui--external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Resources for partners
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section4"
      >
        <ul
          class="ecl-footer-core__list ecl-footer-core__list"
        >
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Language policy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Cookies
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Privacy policy
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Legal notice
            </a>
          </li>
          <li
            class="ecl-footer-core__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-core__link"
              href="/example"
            >
              Brexit content disclaimer
            </a>
          </li>
        </ul>
      </section>
    </div>
  </footer>
</test>
`;

exports[`EC - Footer Core default with missing input data and debug enabled it returns the right warning messages 1`] = `
<test>
  <footer
    class="ecl-footer-core"
  >
    <div
      class="ecl-container ecl-footer-core__container"
    >
      <section
        class="ecl-footer-core__section ecl-footer-core__section1"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-footer-core__title"
          href="/example"
        />
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-mt-xl ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [link] - {{ link.label }} and none of {{ link.icon_position }}, {{ icon.name }}, {{ icon.path }} or {{ icon.type }} can be empty at the same time, an unusable link would be generated otherwise
          </p>
        </div>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section2 ecl-footer-core__section--separator"
      >
        <div
          class="ecl-footer-core__content"
        >
          More information on:
        </div>
      </section>
      <section
        class="ecl-footer-core__section ecl-footer-core__section3"
      />
      <section
        class="ecl-footer-core__section ecl-footer-core__section4"
      />
    </div>
  </footer>
  <!-- ecl2-compliance: footer-core -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-mt-xl ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [footer-core] -  "sections[0].title.link.label" is mandatory, it represents the site name. "sections[0].description" is mandatory as it represents the content owner details. "sections[1].links" is mandatory as it holds the class navigation items. "sections[2].links" is mandatory as it holds the service navigation items. "sections[3].links" is mandatory as it holds the legal navigation items.
    </p>
  </div>
</test>
`;
